# ai-agent-starter

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pipeline.yml  test.yml
discovery/: __main__.py  app.py  authentication_page.py  environment.py  index_page.py  oauth_api.py
discovery/agent_support/: agent.py  tool.py
discovery/auth/: allowed_emails.py  requre_authentication.py  session_manager.py
discovery/github_support/: github_client.py  github_oauth_client.py
discovery/local_repo_support/: local_repo_client.py  scc_client.py
discovery/repository_agent/: analysis_tools.py  github_tools.py  repository_agent.py
discovery/static/style/: layout.css  typography.css
discovery/templates/: layout.html  login.html  oauth_login.html  response.html
explorer/: __main__.py  app.py  environment.py  github_tools.py  index_page.py
explorer/agent_support/: agent.py  tool.py
explorer/github_support/: github_client.py
explorer/repository_explorer/: github_tools.py  repository_agent.py
explorer/static/style/: application.css  buttons.css  layout.css  theme.css  typography.css
explorer/templates/: index.html  layout.html  response.html
tests/: blueprint_test_support.py  slow_test_support.py  test_authentication_page.py  test_index_page.py
tests/agent_support/: test_agent.py  test_tool.py
tests/auth/: test_allowed_emails.py
tests/github_support/: test_github_client.py  test_github_oauth_client.py
tests/repository_agent/: test_repository_agent.py
