[project]
name = "ai-weekend-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "mistune>=3.1.2",
    "openai>=1.66.3",
    "openai-agents>=0.0.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "responses>=0.25.6",
]
